# Aegis-lang

./: .gitignore  CMakeLists.txt
.github/: dependabot.yaml
.github/workflows/: ci.yaml  go.yml  test.yaml
Document/: README.md
Document/What's-lang/: README.md
cli/: go.mod  lasted_version.txt  main.go  version.ps1
cli/cmd/: root.go  version.go
cli/ver/: ver.go
src/: main.cpp  token.hpp
src/ast/: lexer.cpp  lexer.hpp
src/runtime/: interpreter.cpp  interpreter.hpp
src/syntax/: ast_nodes.hpp  parser.cpp  parser.hpp
test/: test.agis
